Prevent cards overflowing within the listing sections
Previously the cards were overflowing in case they had really long
words included in them.

--- a/app/packs/stylesheets/helsinki/modules/_listing.scss
+++ b/app/packs/stylesheets/helsinki/modules/_listing.scss
@@ -1,6 +1,10 @@
 .listing-section{
   padding: 4rem 0;
 
+  .card{
+    max-width: 100%;
+  }
+
   .listing-section-heading{
     padding-bottom: 4rem;
   }
